Core logic complete: correct fee handling, proportional debt distribution, clean UI separation